--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yuva0.github.io/vitaflow",
+  "homepage": "https://yuva0.github.io/vitalflow",
   "name": "vitalflow",
   "version": "0.1.0",
   "private": true,
